--- a/src/main/resources/templates/animaldetails.html
+++ b/src/main/resources/templates/animaldetails.html
@@ -2,18 +2,17 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>homepage</title>
   <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/style.css}" href="../static/css/style.css"/>
+    <title>Animal Details</title>
 </head>
 <body>
-<div th:replace="fragments/header :: header">Home</div>
-
-<div class ="container">
-  <h2>Homepage</h2>
-  <p>Welcome to the party!</p>
-  <p th:text="${mySpecialNumber}">mySpecialNumber</p>
+<div th:replace="fragments/header :: header">Header</div>
+<div class="border">
+  <a th:if="${animal}" th:href="@{|/animaldetails/${prevIndex}|}" href="#" class="nextprev">&lt;</a>
 </div>
-<div class = "border"></div>
+<div class="border">
+  <a th:if="${animal}" th:href="@{|/animaldetails/${nextIndex}|}" href="#" class="nextprev">&gt;</a>
+</div>
 <div th:replace="fragments/footer :: footer">Footer</div>
 </body>
 </html>
