--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-4.dtd">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/style.css}" href="../static/css/style.css"/>
-  <title>header</title>
+  <title>Header</title>
 </head>
 <body>
 <div class="header" th:fragment="header">
@@ -14,9 +14,10 @@
 
     <a class="buttonLook menuButton" th:href="@{/home}">Home</a>
     <a class="buttonLook menuButton" th:href="@{/about}">About</a>
-    <a class="buttonLook menuButton" th:href="@{/venuelist}">Venuelist</a>
+    <a class="buttonLook menuButton" th:href="@{/venuelist}">Venues</a>
+    <a class="buttonLook menuButton" th:href="@{/artistlist}">Artists</a>
+    <a class="buttonLook menuButton" th:href="@{/partylist}">Parties</a>
     <a class="buttonLook menuButton" th:href="@{/pay}">Pay</a>
-    <a class="buttonLook menuButton" th:href="@{/artistlist}">Artistlist</a>
   </div>
 </div>
 </body>
