--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -22,13 +22,6 @@ p{
 }
 
 .buttonLook{
-    background-color: black;
-    color: white;
-    display: block;
-    width: 150px;
-    height: 30px;
-    line-height: 30px;
-    font-size: 20px;
     text-align: center;
     text-decoration: none;
 }
@@ -47,6 +40,24 @@ p{
 .menuButton{
     float: left;
     margin-left: 10px;
+    background-color: black;
+    color: white;
+    display: block;
+    width: 150px;
+    height: 30px;
+    line-height: 30px;
+    font-size: 20px;
+}
+
+.itemButton{
+    background-color: lightgoldenrodyellow;
+    color: black;
+    width: 300px;
+    height: 30px;
+    margin-bottom: 10px;
+    float: left;
+    display: block;
+    margin-right: 200px;
 }
 
 .header{
