--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -1,18 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-4.dtd">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <title>about</title>
   <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/style.css}" href="../static/css/style.css"/>
 </head>
 <body>
-<div th:replace="fragments/header :: header">Home</div>
+<div th:replace="fragments/header :: header">Header</div>
 
 <div class="container">
   <h2>About</h2>
-  <p>Welcome to the about page.</p>
+    <p>Welcome to the about page.</p>
 </div>
 <div class="border"></div>
+
+<div th:replace="fragments/footer :: footer">Footer</div>
 
 </body>
 </html>
