--- a/src/main/resources/templates/partylist.html
+++ b/src/main/resources/templates/partylist.html
@@ -1,25 +1,24 @@
-<!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-4.dtd">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Party list</title>
-  <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/style.css}" href="../static/css/style.css"/>
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/style.css}" href="../static/css/style.css"/>
+    <title>Let's Party!</title>
 </head>
 <body>
-<div th:replace="fragments/header :: header">header</div>
+<div th:replace="fragments/header :: header">Header</div>
 
-<div class="border"></div>
+<h2>Parties</h2>
 
-<div class="container">
-  <p th:text="|${total} parties|"></p>
+    <div class="partylist">
+        <div th:each="party:${parties}">
+            <a class="buttonLook itemButton" th:href="@{|/partydetailsbyid/${party.id}|}" th:text="${party.name}">party name
+            </a>
+        </div>
+    </div>
 
-  <ul class="buttonlist">
-    <li th:each="party, iStat:${parties}">
-      <a th:href="@{|/partydetailbyid/*{iStat.index +1}|}" th:text="|${party.getPartyName()}|" href=""></a>
-    </li>
-  </ul>
-</div>
-<div class="border"></div>
+
+<div th:replace="fragments/footer :: footer">Footer</div>
 
 </body>
 </html>
