--- a/src/main/resources/templates/pay.html
+++ b/src/main/resources/templates/pay.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-4.dtd">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <title>Pay</title>
@@ -9,9 +9,10 @@
 <div th:replace="fragments/header :: header"> header</div>
 <div class="container">
   <h2>Pay</h2>
-  <p>Please pay before <span th:text="${paydate}"></span></p>
-  <p th:if="${weekend}">Have a nice weekend!</p>
-  <p th:unless="${weekend}">Weekend is coming closer!</p>
+    <p>Please pay before <span th:text="${paydate}"></span></p>
+    <p th:if="${weekend}">Have a nice weekend!</p>
+    <p th:unless="${weekend}">Weekend is coming closer!</p>
 </div>
+<div th:replace="fragments/footer :: footer">Footer</div>
 </body>
 </html>
