--- a/src/main/resources/templates/venuedetailsbyid.html
+++ b/src/main/resources/templates/venuedetailsbyid.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-4.dtd">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <title>Venue details by id</title>
@@ -17,7 +17,7 @@
 
   <div th:if="${venue}">
     <h1 th:text="${venue.venueName}">venueTitle</h1>
-    <a th:href="${venue.linkMoreInfo}" href="#">More info</a>
+    <a th:href="${venue.linkMoreInfo}" href="#" target="_blank">More info</a>
   </div>
 
   <p th:unless="${venue}">No valid venue is chosen</p>
@@ -26,6 +26,7 @@
 <div class="border">
   <a th:if="${venue}" th:href="@{|/venuedetailsbyid/${nextIndex}|}" href="#" class="nextprev">&gt;</a>
 </div>
+<div th:replace="fragments/footer :: footer">Footer</div>
 
 </body>
 </html>
